# fates

allometry/: FatesAllomParamsMod.F90  FatesAllometryMod.F90
biogeochem/: CMakeLists.txt  EDCanopyStructureMod.F90  EDCohortDynamicsMod.F90  EDLoggingMortalityMod.F90  EDMortalityFunctionsMod.F90  EDPatchDynamicsMod.F90  EDPhysiologyMod.F90  FatesAllometryMod.F90  FatesLitterMod.F90  FatesPatchMod.F90  FatesSoilBGCFluxMod.F90
biogeophys/: CMakeLists.txt  CanopyRadiationTypesMod.F90  EDAccumulateFluxesMod.F90  EDBtranMod.F90  EDSurfaceAlbedoMod.F90  FatesBstressMod.F90  FatesHydroWTFMod.F90  FatesLeafBiophysParamsMod.F90  FatesPlantHydraulicsMod.F90  FatesPlantRespPhotosynthMod.F90  LeafBiophysicsMod.F90  LeafLevelPhotosynthesisMod.F90  NormanRadiationMod.F90
fire/: SFMainMod.F90  SFParamsMod.F90
functional_unit_testing/: run_fates_tests.py
functional_unit_testing/allometry/: AutoGenVarCon.py  drive_allomtests.py  simple_build.sh
main/: CMakeLists.txt  ChecksBalancesMod.F90  EDInitMod.F90  EDMainMod.F90  EDParamsMod.F90  EDPftvarcon.F90  EDTypesMod.F90  FatesConstantsMod.F90  FatesGlobals.F90  FatesHistoryInterfaceMod.F90  FatesHistoryVariableType.F90  FatesHydraulicsMemMod.F90  FatesInterfaceMod.F90  FatesInterfaceTypesMod.F90  FatesInventoryInitMod.F90  FatesParameterDerivedMod.F90  FatesRestartInterfaceMod.F90  FatesRunningMeanMod.F90
parameter_files/: fates_params_13scls_1pft_master.cdl  fates_params_25scls_1pft_master.cdl  fates_params_25scls_1pft_master_f2.cdl  fates_params_25scls_1pft_master_f3.cdl  fates_params_25scls_1pft_master_f4.cdl  fates_params_41scls_1pft.cdl  fates_params_52scls_1pft.cdl  fates_params_default.cdl  patch_default_bciopt224.xml
parteh/: CMakeLists.txt  PRTAllometricCNPMod.F90  PRTAllometricCarbonMod.F90  PRTGenericMod.F90  PRTLossFluxesMod.F90  PRTParametersMod.F90  PRTParamsFATESMod.F90
radiation/: CMakeLists.txt  FatesCanopyRadiationDriverMod.F90  FatesRadiationMemMod.F90  FatesTwoStreamInterfaceMod.F90  FatesTwoStreamMemMod.F90  KmeansMod.F90  TwoStreamIPPMod.F90  TwoStreamMLPEMod.F90  TwoStreamPPAMod.F90
testing/: CMakeLists.txt  run_fates_tests.py
testing/functional_testing/photosynthesis/: CMakeLists.txt  FatesTestBiophysicalRates.F90  FatesTestGasExchange.F90  FatesTestLeafPhoto.F90  FatesTestPhotosynthesisMod.F90  gas_exchange_plotting.py  photosynthesis_plotting.py_temp
tools/: FatesPFTIndexSwapper.py  FindInactive.py  ListHist.py
(+21 files in other folders)
